jme3 nightly 06.12.2011